# washmix

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  OLD_pyproject.toml  Procfile  README.md  RELEASE.md  api_docs_users.md  datadump.json  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  fabfile.py  heroku.yml  models.drawio  pyproject.toml  requirements.txt  requires.txt  twilio.drawio
.charts/: update.sh
.charts/washmix-back/: Chart.yaml  values.yaml
.charts/washmix-back/templates/: NOTES.txt  _env.yaml  _helpers.tpl  deployment.yaml  ingress.yaml  middleware.yaml  service.yaml
.circleci/: config.yml
.github/workflows/: ci.yaml
apache_configs/: wm_django.prod.conf.py  wm_django.staging.conf.py
app/: __init__.py  apps.py  celery.py  dump.json  middleware.py  tasks.py  urls.py  wsgi.py
app/api/: authentication.py  exceptions.py  fields.py  generators.py  inspectors.py  mixins.py  permissions.py  schema.py  urls.py  utils.py  views.py
app/api/client/: urls.py
app/api/driver/: urls.py
app/api/legacy/: permissions.py  urls.py
app/api/pos/: serializers.py  urls.py  views.py
app/api/serializers/: addresses.py  coupons.py  orders.py  packages.py  products.py  refresh_token.py  users.py
app/api/v1_0/: mixins.py  urls.py
app/api/views/: coupons.py  custom.py  login.py  oauth.py  orders.py  products.py  refresh_token.py  stripe.py  users.py
app/archived/: admin.py  apps.py  models.py
app/archived/migrations/: 0001_initial.py  0002_archivedcustomer.py  0003_auto_20220301_1414.py  0004_auto_20230420_0327.py  0004_auto_20230518_0658.py  0005_archivedcustomer_promo_email_sent_count.py  0005_auto_20230425_0357.py  0006_auto_20230425_0400.py  0006_remove_archivedcustomer_promo_email_sent_count.py  0007_merge_20230914_1004.py
app/billing/: admin.py  checkout_helper.py  choices.py  containers.py  coupon_holder.py  models.py  stripe_helper.py  tasks.py  urls.py  utils.py  validators.py
app/billing/migrations/: 0001_initial.py  0002_add_foreign_keys.py  0002_add_user_on_transaction_and_card.py  0002_auto_20200826_0705.py  0002_auto_20201001_2044.py  0002_auto_20201028_2238.py  (+38 more)
app/branding/: admin_apps.py  apps.py  site.py
app/core/: admin.py  apps.py  backends.py  behaviors.py  common_models.py  containers.py  emails.py  interfaces.py  middleware.py  mixins.py  models.py  package_handler.py  serializers.py  signals.py  tasks.py  utils.py  validators.py  views.py
app/custom_permission/: custom_token_authentication.py
app/deliveries/: __init__.py  admin.py  apps.py  choices.py  common_models.py  containers.py  decorators.py  permissions.py  signals.py  tasks.py  urls.py  utils.py  validators.py
app/django-debug-toolbar/: pyproject.toml
app/error_handling/: custom_error_codes_and_messages.py  wm_errors.py
app/forms/: custom_forms.py
app/legacy/: email_formatters.py  emails.py
app/locations/: __init__.py  admin.py  apps.py  models.py  signals.py
app/media/: dump.json
app/migrations/: 0001_initial.py
app/models/: models.py
app/modules/: constant.py  enums.py  helpers.py  oauth.py  signals.py  stripe.py
app/notifications/: admin.py  apps.py  context.py  emails.py  middleware.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
app/orders/: admin.py  choices.py  helpers.py  models.py  tasks.py  urls.py  utils.py  validators.py  views.py
app/other/: apps.py  media.py  site.py  widgets.py
app/permissions_manager/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/pickups/: admin.py  apps.py  models.py  serializers.py  tasks.py  utils.py  views.py
app/serializer/: address_serializer.py  coupon_serializer.py  order_serializer.py  package_serializer.py  products_serializer.py  refresh_token_serializer.py  user_serializer.py
app/serializers/: users.py
app/settings/: .env  base.py  dev.py  dramatiq.py  initial_info.py  prod.py  production.py  role_manager.py  staging.py  urls.py  wsgi.py
app/sms/: admin.py  models.py  urls.py  views.py
app/social/: pipeline.py
app/subscriptions/: admin.py  choices.py  common_models.py  containers.py  urls.py  utils.py
app/templates/: base.html
app/tests/: test.py
app/users/: admin.py  apps.py  base_models.py  choices.py  forms.py  helpers.py  mixins.py  models.py  signals.py  utils.py  views.py
app/utilities/: email_formatters.py  emails.py  token.py  validators.py  wm_email_config.py  wm_message_config.py
app/views/: coupons.py  login.py  oauth.py  orders.py  products.py  refresh_token.py  stripe.py  users.py  wm_coupon_view.py  wm_custom_views.py  wm_oauth_views.py  wm_order_views.py  wm_product_views.py  wm_refresh_token_view.py  wm_stripe_views.py  wm_user_login_view.py  wm_user_views.py
app/wsgi/: dev.py  prod.py  staging.py
docs/: models-architecture.drawio  models_architecture.drawio  principal-scheme.drawio  twilio-import-flow.json  twilio_import_flow.json
requirements/: base.txt  dev.txt  prod.txt
(+645 files in other folders)
