[tool.black]
line-length = 100
exclude = '''
(
  \.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
  |models
  |/models
)
'''


[tool.isort]
line_length = 100
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
known_django = "django"
profile = "django"
src_paths = "app"


[tool.poetry]
name = "washmix_backend"
version = "0.1.0"
description = "Washmix"
authors = ["Evrone <api@evrone.com>"]


[tool.poetry.dependencies]
python = "~3.7"

# core + api
Django = "~2.2"
djangorestframework = "~3.11"
django-filter = "~2"

# authentication
djoser = "^2.0.3"
djangorestframework-simplejwt = "^4.4.0"

# social authentication
social-auth-app-django = "^3.1.0"

# database
psycopg2-binary = "2.8.5"

# queue
dramatiq = {version = "^1.9", extras = ["redis", "watch"]}

# money
stripe = "^2.12"
twilio = "6.19.2"

# seo
django-robots = "3.1.0"
django-templated-mail = "1.1.1"

# other
requests = "2.20.1"
requests-oauthlib = "1.0.0"
arrow = "0.12.1"
drf-writable-nested = ">=0.6.0"
environs = "^8.0.0"
gunicorn = "^20.0.4"
pyyaml = "^5.3.1"
django-swap-user = ">=0.2.0"
uritemplate = "^3.0.1"
phonenumbers = "^8.12.7"
Pillow = "^7.2.0"
sendgrid = "^6.4.4"
sentry-sdk = "^0.16.3"
pre-commit = "^2.6.0"
drf-yasg = "^1.17.1"


[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.4.2"
Faker = "1.0.0"
fabric3 = "^1.14.post1"
pytest = "^5.4.3"
environs = "^8.0.0"


[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
