[tool.poetry]
name = "washmix-back"
version = "2.0.0"
description = "WashMix Backend - Updated"
authors = ["Amir Beheshtaein <abeheshtaein786@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.6"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.4.0"
redis = "^5.0.1"
stripe = "^7.0.0"
twilio = "^8.10.0"
sendgrid = "^6.10.0"
dramatiq = "^1.15.0"
environs = "^9.5.0"
periodiq = "^0.12.1"
phonenumbers = "^8.13.23"
sentry-sdk = "^1.32.0"
django-debug-toolbar = "^4.2.0"
django-cors-headers = "^4.3.0"
djoser = "^2.2.0"
django-robots = "^6.1"
django-swap-user = "^0.9.8"
django-templated-mail = "^1.1.1"
djangoql = "^0.17.1"
djangorestframework-simplejwt = "^5.3.0"
django-filter = "^23.3"
psycopg2-binary = "^2.9.9"
weasyprint = "^60.1"
drf-yasg = "^1.21.7"
uritemplate = "^4.1.1"
requests-oauthlib = "^1.3.1"
requests = "^2.31.0"
pyyaml = "^6.0.1"
pytest-django = "^4.5.2"
pytest = "^7.4.3"
netaddr = "^0.9.0"
mypy = "^1.6.1"
isort = "^5.12.0"
gunicorn = "^21.2.0"
fabric3 = "^1.14.post1"
drf-writable-nested = "^0.7.0"
django-baton = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
