[tool.black]
line-length = 100
target-version = ['py37']
exclude = '''
(
  \.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
  |models
  |/models
)
'''


[tool.isort]
line_length = 100
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
known_django = "django"
profile = "django"
src_paths = "app"


[tool.poetry]
name = "washmix_backend"
version = "0.1.0"
description = "Washmix"
authors = ["Evrone <api@evrone.com>"]


[tool.poetry.dependencies]
python = "3.9.18"

# core + api
Django = ">=2.0.0,<3.0.0"
djangorestframework = "3.12"
django-filter = "2"
drf-yasg = "1.20"

# authentication
djoser = "2.0.3"
djangorestframework-simplejwt = "4.6"

# social authentication
social-auth-app-django = "3.1.0"

# storages
psycopg2-binary = "2.8.5"
redis = ">=3.5.0,<3.6.0"

# queue
dramatiq = {version = "1.9", extras = ["redis", "watch"]}
periodiq = "0.12.1"

# money
stripe = ">=2.0.0,<3.0.0"
twilio = ">=6.0.0,<7.0.0"

# seo
django-robots = "3.1.0"
django-templated-mail = "1.1.1"

# other
requests = ">=2.0.0,<3.0.0"
requests-oauthlib = "1.0.0"
drf-writable-nested = ">=0.6.0"
environs = "8.0.0"
gunicorn = "20.0.4"
pyyaml = ">=5.3.0,<5.4.0"
django-swap-user = "0.3.4"
uritemplate = ">=3.0.1,<3.1.0"
phonenumbers = "8.12.7"
Pillow = ">=7.2.0,<8.0.0"
sendgrid = ">=6.4.0,<6.5.0"
sentry-sdk = ">=0.16.0,<0.17.0"
pre-commit = "^2.6.0"
netaddr = "0.8.0"
djangoql = ">=0.14.0,<0.15.0"
django-jet = ">=1.0.0,<1.1.0"
WeasyPrint = ">=52.0.0,<53.0.0"
django-cors-headers = ">=3.9.0,<3.10.0"
django-debug-toolbar = ">=3.2.0,<3.3.0"
fabric3 = "1.14.post1"
isort = "5.4.2"
mypy = "0.790"
pytest = "5.4.3"
pytest-django = "3.10.0"


[tool.poetry.dev-dependencies]
black = "~20.8b"
isort = "^5.4.2"
django-debug-toolbar = "^3.2"
Faker = "1.0.0"
fabric3 = "^1.14.post1"
pytest = "^5.4.3"
pytest-django = "^3.10.0"
environs = "^8.0.0"
mypy = "^0.790"


[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
python = "3.9.18"

